--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="zEkQI5ARp3lDrlFmlA2QorpOVsckDNDrNdVZgjukCHk" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Project Fairuz</title>
     <link rel="stylesheet" type="text/css" href="style.css">
